<resources>
    <string name="app_name">Proyecto DISMOV</string>
    <string name="InicioSesionString">Tienda de Extintores</string>


    /**
    Texto y botones Inicio de Sesion
    */
    <string name="QueSomos">Tienda de Extintores</string>
    <string name="SubTituloDelLogin">Ingresa tu correo y contraseña</string>
    <string name="emaillogin">Correo electrónico</string>
    <string name="ContraLogin">Contraseña</string>
    <string name="InicioSesion">Iniciar Sesión</string>
    <string name="AunNoTeR">¿Aun no te registras? ¡Hazlo aqui!</string>

    /**
    Texto y botones Registro
    */
    <string name="TituloDeRegistro">Registro</string>
    <string name="SubTemaDeRegistro">Completa este formulario</string>
    <string name="UsuaRe">Escribe tu nombre de usuario</string>
    <string name="CorreoReg">Escribe tu correo electronico</string>
    <string name="ContraRe">Escribe tu contraseña</string>
    <string name="ConfRe">Confirma tu contraseña</string>
    <string name="BotonRe">Registrarse</string>
    <string name="IniciaRe">¿Ya tienes una cuenta? ¡Inicia sesion aqui!</string>

    <string name="TituloRe">Registro de usuario</string>
    <string name="TituloLog">Inicio de Sesión</string>
    <string name="VideoLlamadaTitulo">Videollamada</string>

    /**
    Texto y botones Videollamada
    */
    <string name="VideoLlamadaCuerpo">Introduce el codigo de llamada asignado por un administrador para entrar a una reunion y tratar el problema en cuestion.</string>
    <string name="VideoCodigo">Ingrese el nombre/codigo de la reunión</string>
    <string name="VideoLlamadaBoton">Unirse</string>
    <string name="VideoLlamadaRegresar">Regresar</string>


    /**
    FALTA SABER DE DONDE SON O SI SE USAN

    <string name="BotonCarrito">ADMINISTRADOR</string>

    <string name="BotonChat">Chat</string>
    <string name="TituloVideoLlamada">Fire World Seguridad-Administrador</string>


    <string name="ChatUsuario">Chat</string>
    <string name="RegresarUsuario">Cerrar Sesión</string>
    <string name="TituloUsuario">Fire World Seguridad</string>
    <string name="Titulo">FireWorld Seguridad</string>

    <string name="CarritoUsuario">Usuario</string>
    <string name="ProductosUsuario">Productos</string>
    <string name="VideollamadaUsuario">Videollamada</string>
    */

    /**
    Botones de Menus de Usuario y Administradores
    */
    <string name="BotonProductos">Productos</string>
    <string name="BotonVideoLlamada">Videollamada</string>
    <string name="btnServicios">Servicios</string>
    <string name="btnContacto">Contacto</string>
    <string name="btnPerfil">Perfil</string>
    <string name="BotonRegresar">Cerrar Sesión</string>
    <string name="TituloUsuarioEnMenu">Usuario</string>
    <string name="TituloAdminEnMenu">Administrador</string>
    <string name="Contacto">Nuestros medios de contacto</string>
    <string name="Datos">Luis Andres Leyva Villa</string>
    <string name="Datos2">81 1020 1176</string>
    <string name="Datos3">leyva_hs@outlook.com</string>
    <string name="Datos4">Facebook: FireWorldSeguridad</string>
    <string name="Datos5">Instagram: fwseguridad</string>
    <string name="Regresar">Regresar</string>
    <string name="ContactoTitulo">Contacto</string>
    <string name="TituloProductos">Productos</string>
    <string name="PolvoSecoBtn">Extintor Polvo Químico Seco</string>
    <string name="DioxidoDeCarbonoBtn">Extintor Dióxido de Carbono</string>
    <string name="AcetatoBtn">Extintor Acetato de Potasio</string>
    <string name="AcetatoTitulo">Extintor Acetato de Potasio</string>
    <string name="DioxidoTitulo">Extintor Dióxido de Carbono</string>
    <string name="PolvoTitulo">Extintor Polvo Químico Seco</string>
    <string name="btnSend">Enviar</string>
    <string name="placeholderMsg">mensaje</string>
    <string name="FinishCall">Llamada finalizada</string>


</resources>